--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -35,6 +35,7 @@ deny 2001:678:e3c::a;
 deny 2001:678:e3c::b;
 deny 2001:678:e3c::c;
 deny 2001:678:e3c::d;
+deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -129,7 +130,6 @@ deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
@@ -198,6 +198,7 @@ deny 2605:6400:30:f174:42:42:42:42;
 deny 2605:6400:30:f174:4:3:2:1;
 deny 2605:6400:30:f174:cafe::;
 deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
+deny 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 deny 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 deny 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 deny 2605:6400:30:f414:42ce:c612:dab8:1337;
@@ -227,7 +228,6 @@ deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
-deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::4894;
 deny 2607:5300:61:785::;
@@ -345,6 +345,7 @@ deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
+deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
@@ -486,7 +487,6 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
-deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
@@ -717,6 +717,7 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+deny 2a12:1e01::2;
 deny 2a12:3e80:2:29::;
 deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
